refactor(PurchasedLottosDTO): .toList() 로 간소화